[Update]メーラー設定

--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -11,6 +11,9 @@
   &__item {
     margin-left: 40px;
     margin-top: 20px;
+    &--link {
+      text-decoration: none;
+    }
   }
   &__btn {
     margin: 50px 30px;
