--- a/app/views/public/spots/edit.html.erb
+++ b/app/views/public/spots/edit.html.erb
@@ -1,5 +1,8 @@
 <!--エラー表示-->
 <%= render "layouts/error", resource: @spot %>
+<% unless @tag === true %>
+    <%= render "layouts/error", resource: @tag %>
+<% end %>
 
 <h2 class="heading">編集</h2>
 <%= form_with model: @spot, url: spot_path, local: true do |f| %>
