--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -99,10 +99,10 @@
           </li>
           <li class="header__link--item">
             <%= link_to notifications_path do %>
-              <i class="fa-solid fa-bell header__icon"></i>
+              <i class="fa-solid fa-bell header__icon"></i>通知
             <% end %>
             <% if unchecked_notification.any? %>
-              <i class="fa-solid fa-circle header__action"></i>通知
+              <i class="fa-solid fa-circle header__action"></i>
             <% end %>
           </li>
           <li>
