--- a/app/views/public/spots/_form.html.erb
+++ b/app/views/public/spots/_form.html.erb
@@ -31,7 +31,7 @@
       <th class="table__heading"><%= f.label :タグ %></td>
       <td class="table__form">
         <%= f.text_field :tag_ids, :placeholder => "#店名　#ペット可　#駐車場", class: "table__form--field" %>
-        <p class="table__text">半角#をお付けください、複数の場合は空白で区切ってください</p>
+        <p class="table__text">#をお付けください、複数の場合は空白で区切ってください</p>
       </td>
     </tr>
   </table>
