--- a/app/views/public/spots/show.html.erb
+++ b/app/views/public/spots/show.html.erb
@@ -3,7 +3,7 @@
     <ul class="image__box">
       <% @spot.spot_images.each do |image| %>
         <li class="image__item">
-          <%= image_tag image, size: "500x500" %>
+          <%= image_tag image, size: "500x500", class: "image__item--res" %>
         </li>
       <% end %>
     </ul>
