--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -6,7 +6,11 @@
 
   &__content {
     width: 100%;
-    margin-left: 30px;
+  }
+  &__map {
+    width: 100%;
+    margin-top: 30px;
+    margin-left: 5px;
   }
   &__item {
     margin-left: 40px;
