--- a/app/assets/stylesheets/btn.scss
+++ b/app/assets/stylesheets/btn.scss
@@ -86,4 +86,25 @@
       color: white;
     }
   }
+  
+  %__small{
+    display: inline-block;
+    padding: 0.3em 0.8em;
+    text-decoration: none;
+    transition: .4s;
+  }
+  &__small{
+     &--green {
+      @extend %__small;
+      background: #8FBC8F;
+      color: white;
+      border: solid 2px #8FBC8F;
+      font-size: small;
+      border-radius: 3px;
+    }
+    &--green:hover {
+      background: #669966;
+      border: solid 2px #669966;
+    }
+  }
 }
