--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -6,11 +6,7 @@
 
   &__content {
     width: 100%;
-  }
-  &__map {
-    width: 100%;
-    margin-top: 30px;
-    margin-left: 5px;
+    margin-left: 10px;
   }
   &__item {
     margin-left: 40px;
@@ -43,6 +39,10 @@
     &--index {
       padding: 20px;
     }
+  }
+  
+  &__link {
+    text-decoration: none;
   }
 }
 
