--- a/app/views/public/spots/show.html.erb
+++ b/app/views/public/spots/show.html.erb
@@ -1,9 +1,9 @@
 <div class="show">
   <div class="show__image">
-    <ul class="image__box">
+    <ul class="slider">
       <% @spot.spot_images.each do |image| %>
-        <li class="image__item">
-          <%= image_tag image, size: "500x500", class: "image__item--res" %>
+        <li>
+          <%= image_tag image, size: "500x500" %>
         </li>
       <% end %>
     </ul>
