--- a/app/views/public/spots/_index.html.erb
+++ b/app/views/public/spots/_index.html.erb
@@ -3,7 +3,7 @@
     <div class="index-address__item">
       
       <div class="image">
-        <ul class="image__box">
+        <ul class="slider image__box">
           <% spot.spot_images.each do |image| %>
             <li class="image__item">
               <%=link_to spot_path(spot) do %>
