--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -5,7 +5,6 @@
   display: flex;
   flex-wrap: wrap;
  
-
   &__item {
     max-width: 350px;
     padding: 3px;
@@ -13,8 +12,24 @@
 }
 
 // レスポンシブ対応
+@media (max-width: 1390px){
+  .index {
+    width: 1100px;
+  }
+}
+
+@media (max-width: 1024px){
+  .index {
+    width: 720px;
+  }
+}
+
 @media (max-width: 710px){
-.index-address {
-  display: block;
+  .index {
+    display: block;
+    width: 95%;
+    &__item {
+      margin: 0 auto;
+    }
   }
 }
