--- a/app/assets/stylesheets/table.scss
+++ b/app/assets/stylesheets/table.scss
@@ -63,5 +63,11 @@
     &__heading {
       width: 40%;
     }
+    &__item {
+      font-size: small;
+    }
+    &__heading {
+      font-size: small;
+    }
   }
 }
