--- a/app/views/public/spots/_index.html.erb
+++ b/app/views/public/spots/_index.html.erb
@@ -1,8 +1,9 @@
 <div class="index-address">
   <% spots.each do |spot| %>
     <div class="index-address__item">
-      
+
       <div class="image">
+        <!--test-->
         <ul class="slider image__box">
           <% spot.spot_images.each do |image| %>
             <li class="image__item">
@@ -22,7 +23,7 @@
           <%= render "public/favorites/favorite", spot: spot %>
         </span>
       </div>
-      
+
     </div>
   <% end %>
 </div>
