--- a/app/views/public/spots/_index.html.erb
+++ b/app/views/public/spots/_index.html.erb
@@ -16,6 +16,7 @@
 
       <div class="index-address__content">
         <span class="index-address__text">
+          <%= image_tag "label2.png" %>
           <%= spot.address.truncate(20, omission: '…') %>
         </span>
         <span class="favorite" id="favorite-btn-<%= spot.id %>">
