--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,7 @@
 
 body {
   width: 100%;
+  background-color: #FFF;
 }
 
 #error {
@@ -47,5 +48,6 @@ body {
     display: none;
   }
 }
+
 @import "slick-theme";
 @import "slick";
