--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -4,16 +4,29 @@
 </div>
 
 <div class="text">
-  <h3 class="text__heading">What about Spot Label?</h3>
+  <h3 class="text__heading">
+    <%= image_tag "label.png" %>
+    What about Spot Label?
+  </h3>
   <p class="text__content">
     Spot Labelは地元や旅先で見つけた素敵な場所を共有するSNSサイトです。<br>
+  </p>
+  <p class="text__content">
     旅先の帰り道、ぶらり旅で素敵なお店や場所を見つけませんか？<br>
+  </p>
+  <p class="text__content">
     温かい店主のお店、雰囲気抜群のスポット、あなたのお気に入りの場所にラベルをつけませんか？<br>
+    
+  </p>
+  <p class="texr__contetn">
     日常に溢れる素敵な場所を共有しましょう！
   </p>
 
   <div>
-    <h3 class="text__heading">Spot Labelをはじめよう</h3>
+    <h3 class="text__heading">
+      <%= image_tag "label.png" %>
+      Spot Labelをはじめよう
+    </h3>
     <div class="btn">
        <%= link_to "新規登録", new_end_user_registration_path, class: "btn__simple--blue" %>
        <%= link_to "ログイン", new_end_user_session_path, class: "btn__simple--green" %>
