--- a/app/assets/stylesheets/slick-theme.scss
+++ b/app/assets/stylesheets/slick-theme.scss
@@ -40,14 +40,15 @@ $slick-opacity-not-active: 0.25 !default;
 }
 
 /* Slider */
-
+/*
 .slick-list {
     .slick-loading & {
         background: #fff slick-image-url("ajax-loader.gif") center center no-repeat;
     }
 }
-
+*/
 /* Icons */
+/*
 @if $slick-font-family == "slick" {
     @font-face {
         font-family: "slick";
@@ -57,7 +58,7 @@ $slick-opacity-not-active: 0.25 !default;
         font-style: normal;
     }
 }
-
+*/
 /* Arrows */
 
 .slick-prev,
