[Update]テキストの微調整

--- a/app/views/public/searches/search.html.erb
+++ b/app/views/public/searches/search.html.erb
@@ -11,8 +11,8 @@
     </tr>
     <tr>
       <td class="table__text">
-        ※タグ名を検索するときは#を付けて検索してください<br>
-      （例）「世田谷区　#カフェ　#駐車場あり」
+        タグ名を検索するときは#を付けて検索してください<br>
+        複数検索の場合は空白区切りで入力してください（例）「世田谷区　#カフェ　#駐車場あり」
       </td>
     </tr>
   </table>
