--- a/app/views/public/spots/show.html.erb
+++ b/app/views/public/spots/show.html.erb
@@ -60,6 +60,9 @@
   <% end %>
 
   <div id="comment-index-<%= @spot.id %>">
-      <%= render "public/comments/index", spot: @spot, comments: @comments %>
+    <%= render "public/comments/index", spot: @spot, comments: @comments %>
+  </div>
+  <div>
+    <%= paginate @comments %>
   </div>
 </div>
