[Update]コメント一覧追加

--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -43,6 +43,13 @@
   
   &__link {
     text-decoration: none;
+    color: black;
+    
+    &--right {
+      width: 70%;
+      margin: 0 auto;
+      text-align: right;
+    }
   }
 }
 
