--- a/app/views/public/comments/_comments_index.html.erb
+++ b/app/views/public/comments/_comments_index.html.erb
@@ -1,7 +1,7 @@
-<table>
+<table class="table">
   <tbody>
     <% comments.each do |comment| %>
-      <tr>
+      <tr class="table__row">
         <td>
           <%= link_to end_user_path(comment.end_user), class: "profile__name" do %>
             <%= image_tag comment.end_user.get_profile_image, class: "profile__image--small", size: "50x50" %><br>
