--- a/app/views/public/comments/destroy.js.erb
+++ b/app/views/public/comments/destroy.js.erb
@@ -1,1 +1,2 @@
-$("#comment-index-<%= @spot.id %>").html("<%= j(render 'index', spot: @spot, comments: @comments) %>");
+$("#comment-index-<%= @spot.id %>").html("<%= j(render 'comments', spot: @spot, comments: @comments) %>");
+$("#comments-<%= @spot.id %>").html("<%= j(render 'comments_index', spot: @spot, comments: @comments) %>");
