--- a/app/views/public/spots/show.html.erb
+++ b/app/views/public/spots/show.html.erb
@@ -60,6 +60,6 @@
   <% end %>
 
   <div id="comment-index-<%= @spot.id %>">
-    <%= render "public/comments/index", spot: @spot, comments: @comments %>
+    <%= render "public/comments/comments", spot: @spot, comments: @comments %>
   </div>
 </div>
