--- a/app/views/public/comments/create.js.erb
+++ b/app/views/public/comments/create.js.erb
@@ -1,3 +1,3 @@
-$("#comment-index-<%= @spot.id %>").html("<%= j(render 'index', spot: @spot, comments: @comments) %>");
+$("#comment-index-<%= @spot.id %>").html("<%= j(render 'comments', spot: @spot, comments: @comments) %>");
 $("#comment-form").val("")
 $("#error").html("")
